psp-migration/restrict-adding-capabilities/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod03
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod04
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod05
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
  - name: container02
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod06
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod07
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod08
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod09
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod10
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
  containers:
  - name: container01
    image: busybox:1.35
